--- a/src/global.css
+++ b/src/global.css
@@ -89,3 +89,855 @@
 [data-load-hero-img]{width: 100vw; height: 100vh;}
 [data-load-hero-overlay]{opacity: 1;}
 [data-load-placeholder]{opacity: 0; transform:translate(0px , 50%);}
+
+
+.vid-wrap {
+  z-index: 1;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  position: absolute;
+  inset: auto;
+  overflow: hidden
+}
+
+.vid-wrap.is--wide {
+  width: 100%;
+  inset: 0%
+}
+
+.cover-img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%
+}
+
+.cover-img.z--2 {
+  z-index: 2;
+  position: relative
+}
+
+
+.plyr_vid {
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  position: absolute
+}
+
+.w-embed:before,.w-embed:after {
+  content: " ";
+  grid-area: 1/1/2/2;
+  display: table
+}
+
+.three-col_wrap {
+  width: 100%
+}
+
+.three-col_list {
+  flex-flow: row;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-auto-columns: 1fr;
+  margin-left: -.5vw;
+  margin-right: -.5vw;
+  display: flex
+}
+
+.three-col_item {
+  color: #efefeb;
+  flex: 0 auto;
+  width: 33.3333%;
+  max-width: 100%;
+  transition: width 1.1s cubic-bezier(.19,1,.22,1),flex 1.1s cubic-bezier(.19,1,.22,1);
+  display: flex;
+  position: relative
+}
+
+.three-col_item:hover {
+  max-width: 66.7%
+}
+
+.three-col_item.is--active {
+  width: 100%
+}
+
+.section.grid-wrap.is-white {
+  background-color: var(--white);
+  padding-top: 1.5vw;
+}
+
+.section {
+  z-index: 2;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: .5vw 2vw 1vw;
+  position: relative;
+  overflow: hidden;
+}
+
+.img.is-height {
+  flex: 1;
+  width: auto;
+  max-width: none;
+  height: 100%
+}
+
+.qv_item {
+  padding-top: var(--quickview-inner-small);
+  padding-right: var(--quickview-inner-small);
+  padding-left: var(--quickview-inner-small);
+  border: 1px dashed #000;
+  border-radius: .7vw;
+  flex-direction: column;
+  flex: 1;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  position: absolute;
+  top: 0;
+  overflow: hidden
+}
+
+.qv_credit-item {
+  grid-column-gap: .125rem;
+  grid-row-gap: .125rem;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-end;
+  display: flex
+}
+
+.qv_credit-item.is--campaign {
+  display: flex
+}
+
+.qv_spacer {
+  height: 1.2vw
+}
+
+.qv_wrap {
+  width: 100%;
+  height: 100%;
+  position: relative
+}
+
+
+.cell_gradient {
+  z-index: 0;
+  pointer-events: none;
+  background-image: linear-gradient(#fff0,#00000061);
+  height: 8vw;
+  position: absolute;
+  inset: auto 0% 0%
+}
+
+.cell_container {
+  grid-column-gap: 1.5vw;
+  grid-row-gap: 1.5vw;
+  display: flex;
+  position: relative
+}
+
+.cell_inner {
+  border: 1px dashed #000;
+  border-radius: .7vw;
+  width: 100%
+}
+
+.cell_inner.is-right {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 68%;
+  display: flex
+}
+
+.cell_inner.is-right.is-white {
+  border-style: dashed;
+  border-color: var(--white)
+}
+
+.cell_inner.is-right.is-white.is-studio {
+  width: 59%;
+  height: 45.5vw
+}
+
+.cell_inner.is-right.is-contact {
+  border-color: var(--white);
+  width: 100%;
+  height: 100%
+}
+
+.cell_inner.is-left {
+  border-style: none;
+  width: 40%;
+  height: 46vw
+}
+
+.cell_inner.is-left-2 {
+  border-style: none;
+  border-radius: 0;
+  width: 52%;
+  height: 51vw
+}
+
+.cell_inner.is-right-2 {
+  border-style: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 68%;
+  display: flex
+}
+
+.cell_desc-row {
+  grid-column-gap: .4vw;
+  grid-row-gap: .4vw;
+  align-items: flex-end;
+  display: flex
+}
+
+.cell_desc-row.is-vertical {
+  grid-column-gap: 0vw;
+  grid-row-gap: 0vw;
+  flex-direction: column;
+  align-items: center
+}
+
+.cell_des {
+  z-index: 1;
+  position: relative
+}
+
+.cell_des.l_sx {
+  margin-right: .5vw
+}
+
+.cell_desc-eyebrow {
+  z-index: 2;
+  margin-bottom: 2vw;
+  position: relative
+}
+
+.cell_desc-wrap {
+  flex-direction: column;
+  align-items: center;
+  display: flex
+}
+
+.cell_desc-wrap.is-t {
+  margin-bottom: 3vw
+}
+
+.cell_desc-text {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  max-width: 64%;
+  margin-top: 3vw;
+  margin-bottom: 2vw;
+  display: flex
+}
+
+.cell_desc-text.is-vertical {
+  flex-flow: column;
+  max-width: 70%
+}
+
+.cell_desc-text.is-vertical.ios-3 {
+  margin-top: 2vw
+}
+
+.cell_bleed {
+  grid-column-gap: 1.5vw;
+  grid-row-gap: 1.5vw;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  display: flex
+}
+
+.cell_split {
+  grid-column-gap: 1.5vw;
+  grid-row-gap: 1.5vw;
+  height: 50%;
+  min-height: 50%;
+  display: flex
+}
+
+.cell_block {
+  border: 1px dashed #000;
+  border-radius: .7vw;
+  flex-direction: column;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  position: relative;
+  overflow: hidden
+}
+
+.cell_block.up-right {
+  text-align: center
+}
+
+.cell_block.is-bottom {
+  cursor: pointer;
+  border-style: dashed;
+  height: 21vw
+}
+
+.cell_block.is-bottom.is-white {
+  border-color: var(--white);
+  height: 21vw
+}
+
+.cell_block.is-bottom.is-white.is-2 {
+  height: 40vw
+}
+
+.cell_block.is-bottom.is-white.is-3 {
+  height: 19vw
+}
+
+.cell_block.quick-view {
+  flex: 0 auto;
+  width: 17vw;
+  min-width: 17vw;
+  height: 23vw;
+  position: absolute
+}
+
+.cell_block.quick-view.is-white,.cell_block.is-white {
+  border-color: var(--white)
+}
+
+.cell_block.is-full {
+  height: 100%;
+  overflow: hidden
+}
+
+.cell_list-wrap {
+  width: 100%;
+  height: 100%
+}
+
+.cell_img-wrap {
+  z-index: 1;
+  position: absolute;
+  inset: 0%
+}
+
+.cell_img-wrap.studio-2 {
+  justify-content: center;
+  align-items: center;
+  display: flex
+}
+
+.cell_info {
+  z-index: 2;
+  grid-column-gap: .7vw;
+  grid-row-gap: .7vw;
+  flex-direction: column;
+  width: 100%;
+  padding-bottom: 1.5vw;
+  padding-left: 1.5vw;
+  display: flex;
+  position: absolute;
+  inset: auto 0% 0%
+}
+
+.cell_text {
+  max-width: 75%;
+  margin-top: 2vw;
+  margin-bottom: 2vw
+}
+
+.cell_img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  inset: 0%
+}
+
+.cell_img.is-height {
+  justify-content: center;
+  align-items: center;
+  display: flex
+}
+
+.cell_img.is-height.is-blend {
+  background-color: var(--white);
+  mix-blend-mode: darken
+}
+
+.cell_list-list {
+  height: 100%
+}
+
+.cell_list-item {
+  height: 100%;
+  overflow: hidden
+}
+
+.cell_list-item.show--o {
+  overflow: visible
+}
+
+.cell_eyebrow {
+  z-index: 2;
+  margin-bottom: .5vw;
+  position: relative
+}
+
+.cell_h4 {
+  text-align: center;
+  max-width: 90%
+}
+
+.cell_slant.is-right {
+  margin-left: .4vw
+}
+
+.cell_trigger {
+  z-index: 3;
+  cursor: pointer;
+  width: 2vw;
+  height: 2vw;
+  display: block;
+  position: absolute;
+  inset: 1vw 1vw auto auto
+}
+
+.cell_trigger.is--mobile,.cell_trigger.is-project,.cell_trigger.is-studio,.cell_trigger.is-hide {
+  display: none
+}
+
+.call_img-bg {
+  background-image: url(https://d3e54v103j8qbb.cloudfront.net/img/background-image.svg);
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  inset: 0%
+}
+
+.call_img-bg.is-studio {
+  background-image: url(https://cdn.prod.website-files.com/64e6091972f5864e5b3e6f9e/65a50802635069142e5b3e28_grid_l.webp);
+  background-position: 50%;
+  background-size: cover
+}
+
+.cell_bleed-2 {
+  grid-column-gap: 1.5vw;
+  grid-row-gap: 1.5vw;
+  flex-direction: column;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr;
+  grid-auto-columns: 1fr;
+  width: 100%;
+  height: 100%;
+  display: grid
+}
+
+.cell_split-2 {
+  grid-column-gap: 1.5vw;
+  grid-row-gap: 1.5vw;
+  display: flex;
+  overflow: hidden
+}
+
+.cell_split-2.mask {
+  overflow: visible
+}
+
+.cell_content {
+  z-index: 1;
+  border-radius: .7vw;
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  min-height: 19vw;
+  position: relative;
+  overflow: hidden
+}
+
+.cell_text-2 {
+  max-width: 61%;
+  margin-top: 2vw
+}
+
+:root {
+  --plyr-color-main: #efefeb;
+  --plyr-control-icon-size: 1rem;
+  --plyr-range-thumb-height: 1rem;
+  --plyr-range-track-height: 2px !important;
+  --plyr-tooltip-background: var(--plyr-color-main);
+  --plyr-tooltip-color: #181618;
+  --plyr-range-thumb-active-shadow-width: 0px !important;
+}
+
+.plyr--full-ui input[type=range]::-webkit-slider-thumb {
+  background-image: url("https://cdn.prod.website-files.com/64e6091972f5864e5b3e6f9e/659ec4fb019e1641cf7f02c1_S.svg");
+  border-radius: 0px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.plyr {
+  height: 100%;
+}
+
+.plyr__video-embed iframe {
+  min-width: 130%;
+  min-height: 120%;
+  object-fit: cover;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 0.7vw;
+  border: none !important;
+}
+
+.plyr__video-embed.is--full iframe {
+  width: 90vw;
+  height: 56.25vw;
+  min-height: 100vh;
+  min-width: 165vh;
+}
+
+.plyr__video-embed.is--scaled iframe {
+  min-width: 160%;
+}
+
+.plyr__video-embed.is--project iframe {
+  min-width: 100%;
+  min-height: 160%;
+}
+
+.plyr__video-wrapper {
+  min-width: 100%;
+  min-height: 102%;
+  aspect-ratio: 16/9.6 !important;
+}
+
+.plyr__video-embed__container {
+  transform: translateY(-38%) !important;
+}
+
+.plyr__controls {
+  display: flex;
+  justify-content: center !important;
+  align-items: center;
+  align-content: center;
+  padding: 2vw 15% !important;
+  transition: opacity 0.4s ease-in-out, transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.plyr__control:hover {
+  background: none !important;
+  opacity: 0.7;
+}
+
+.plyr__progress input[type="range"] {
+  padding: 12px 0px !important;
+}
+
+.plyr__time {
+  font-size: 0.75rem;
+  transform: translateY(-5%);
+}
+
+.plyr_vid.is--full .plyr__video-wrapper {
+  width: 108% !important;
+  transform: translate(-4%, -12%) !important;
+}
+
+.plyr--video {
+  min-width: 100% !important;
+}
+
+.plyr__volume {
+  display: none !important;
+}
+
+[data-hover-scale] .plyr__video-embed__container {
+  transform: translateY(-35.9%) !important;
+}
+
+[data-hover-scale] .plyr__video-embed iframe {
+  min-width: 170%;
+}
+
+.three-col_item .plyr__video-embed iframe {
+  min-width: 210%;
+}
+
+[data-hover-scale] .plyr__controls, [data-preview="full-bleed"] .plyr__controls, .three-col_item .plyr__controls {
+  display: none;
+}
+
+[data-preview="full-bleed"] .plyr_vid {
+  height: 110% !important;
+}
+
+[data-preview="full-bleed"] .plyr_vid.is--full .plyr__video-wrapper {
+  transform: translate(-4%, -8%) !important;
+}
+
+.plyr:fullscreen .plyr__video-embed__container {
+  padding-bottom: unset !important;
+  height: 100% !important;
+  transform: translateY(0%) !important;
+}
+
+.plyr:fullscreen .plyr__video-embed {
+  height: 100% !important;
+}
+
+.plyr:fullscreen .plyr__video-embed iframe {
+  min-width: 100% !important;
+  min-height: 100% !important;
+}
+
+.plyr:fullscreen .plyr__video-wrapper {
+  min-height: 100% !important;
+}
+
+.plyr--full-ui .plyr__video-embed>.plyr__video-embed__container {
+  padding-bottom: 200%;
+}
+
+.qv_item .plyr__video-embed iframe {
+  min-width: 145% !important;
+}
+
+.qv_item .plyr--full-ui .plyr__video-embed>.plyr__video-embed__container {
+  padding-bottom: 240% !important;
+}
+
+.vid-wrap.is--wide.three-col .plyr__video-embed__container {
+  transform: translateY(-35%) !important;
+}
+
+.three-col__link-img {
+  width: 100%;
+  transform: rotate(45deg)
+}
+
+.flex-h {
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  display: flex
+}
+
+.flex-h.gap-s {
+  grid-column-gap: .5vw;
+  grid-row-gap: .5vw;
+  flex: 0 auto;
+  width: 2vw
+}
+
+.flex-h.gap-l {
+  grid-column-gap: 1vw;
+  grid-row-gap: 1vw
+}
+
+.flex-h.j--between {
+  justify-content: space-between
+}
+
+.three-col__content {
+  z-index: 3;
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+  position: absolute;
+  inset: auto 1.5vw 1.5vw
+}
+
+.flex-v {
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  display: flex
+}
+
+.flex-v.gap-xs {
+  grid-column-gap: .3vw;
+  grid-row-gap: .3vw;
+  flex: 0 auto
+}
+
+.flex-v.a--center {
+  align-items: center
+}
+
+.flex-v.gap-s {
+  grid-column-gap: 1vw;
+  grid-row-gap: 1vw
+}
+
+.three-col__inner {
+  border: 1px dashed #000;
+  border-radius: .625rem;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: stretch;
+  width: 100%;
+  height: 40vw;
+  margin-left: .5vw;
+  margin-right: .5vw;
+  position: relative;
+  overflow: hidden
+}
+
+.bg-img {
+  z-index: 0;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  inset: 0%
+}
+
+.bg-img.rel-w.z--2 {
+  z-index: 2
+}
+
+.cta_link-img {
+  width: 2vw;
+  margin-right: -.25vw
+}
+
+.cta_link-2 {
+  grid-column-gap: .5vw;
+  grid-row-gap: .5vw;
+  align-items: center;
+  margin-top: 2vw;
+  display: flex;
+  position: relative
+}
+
+.eyebrow_14-4 {
+  letter-spacing: .1em;
+  text-transform: uppercase;
+  font-family: Messina Sans,sans-serif;
+  font-size: .7vw;
+  font-weight: 600;
+  line-height: .7vw
+}
+
+.cta_text .eyebrow_14 {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.vid-wrap.is--wide.three-col video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* 确保视频覆盖整个容器 */
+  position: absolute;
+}
+
+/* 隐藏中间的播放按钮 */
+.plyr__control--overlaid {
+  display: none !important;
+}
+
+.body_17 {
+  letter-spacing: -.01em;
+  margin-bottom: 0;
+  font-family: HK Guise,sans-serif;
+  font-size: .8vw;
+  font-weight: 600;
+  line-height: .9vw
+}
+
+.body_17.is-white {
+  direction: ltr;
+  color: var(--white);
+  white-space: normal;
+  word-break: break-all;
+  overflow-wrap: normal;
+  padding-bottom: .2vw
+}
+
+.body_17.is-menu {
+  font-size: 1rem;
+  line-height: 1rem
+}
+
+.body_17.is-small {
+  font-size: .7vw;
+  line-height: .8vw
+}
+
+.cell_desc-text-2 {
+  text-align: center;
+  max-width: 57%;
+  margin-top: 3vw
+}
+
+.m-top.m--small {
+  margin-top: 2vw;
+}
+
+.cta_text {
+  position: relative;
+  display: inline-block;
+}
+
+.cta_link {
+  z-index: 4;
+  grid-column-gap: .2vw;
+  grid-row-gap: .2vw;
+  cursor: pointer;
+  align-items: center;
+  display: flex;
+  position: relative;
+}
+
+.plyr__poster {
+  background-size: cover;
+  background-position: center; /* 背景居中显示 */
+  background-repeat: no-repeat; /* 防止背景图重复 */
+}
+
+@media screen and (max-width: 479px) {
+  .plyr--fullscreen-enabled .plyr__video-embed__container {
+      transform: translateY(-5%) !important;
+  }
+
+  .qv_item .plyr--fullscreen-enabled .plyr__video-embed__container {
+      transform: translateY(-8%) !important;
+  }
+
+  .plyr--full-ui .plyr__video-embed>.plyr__video-embed__container {
+      padding-bottom: 70% !important;
+  }
+
+  .qv_item .plyr--full-ui .plyr__video-embed>.plyr__video-embed__container {
+      padding-bottom: 70% !important;
+  }
+
+  .qv_item .plyr__video-embed {
+      border-radius: 0.7vw;
+  }
+}
+
+.three-col_item .plyr--full-ui .plyr__video-embed>.plyr__video-embed__container {
+  padding-bottom: 290% !important;
+}
