--- a/src/global.css
+++ b/src/global.css
@@ -166,7 +166,6 @@
 }
 
 .section.grid-wrap.is-white {
-  background-color: var(--white);
   padding-top: 1.5vw;
 }
 
@@ -914,6 +913,62 @@
   background-size: cover;
   background-position: center; /* 背景居中显示 */
   background-repeat: no-repeat; /* 防止背景图重复 */
+}
+
+.marquee {
+  color: #e5e7df;
+  letter-spacing: -.05em;
+  text-transform: uppercase;
+  border-radius: 1vw;
+  height: 25vw;
+  margin-top: 1vw;
+  font-size: 24.375vw;
+  line-height: .85;
+  position: relative;
+  overflow: hidden
+}
+
+.marquee-inner {
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
+  display: flex;
+  position: relative
+}
+
+.marquee-bg__panel {
+  background-color: #052e16;
+  width: 16.6667%;
+  height: 100%
+}
+
+.marquee-panel {
+  flex: none;
+  align-items: center;
+  height: 100%;
+  display: flex;
+}
+
+.marquee-bg {
+  z-index: 0;
+  flex-direction: row;
+  justify-content: center;
+  align-items: stretch;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  position: absolute;
+  inset: 0%
+}
+
+.bd_category {
+  border: 1px dashed #000;
+  border-radius: .5vw;
+  width: 100%;
+  height: 10vw;
+  padding: 1vw;
+  position: relative;
 }
 
 @media screen and (max-width: 479px) {
